base/frontend-configmap.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: e-com
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
